feat: adiciona favicon profissional

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta name="robots" content="index, follow">
     <meta name="googlebot" content="index, follow">
     <link rel="canonical" href="https://ssgestaodetrafego.sstechnologies-cloud.com/">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.svg">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
